--- a/src/app/centroeducativo/titulo/titulo.page.html
+++ b/src/app/centroeducativo/titulo/titulo.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Título</ion-title>
+    <ion-title>Ciclo Formativo</ion-title>
     <ion-buttons slot="end">
-      <!--Botón qu permite salir de la sesión actual con el ultimo usuario logueado-->
+      <!--Botón que permite salir de la sesión actual con el ultimo usuario logueado-->
       <ion-button (click)="cerrarSesion()">
         <ion-icon slot="icon-only" name="exit"></ion-icon>
       </ion-button>
