--- a/src/app/pages/ce-module-edit/ce-module-edit.page.html
+++ b/src/app/pages/ce-module-edit/ce-module-edit.page.html
@@ -13,7 +13,7 @@
   <form [formGroup]="formModulo" (ngSubmit)="submitForm()">
     <ion-item counter="true" fill="solid">
       <ion-label position="floating">Co. Módulo</ion-label>
-      <ion-input  maxlength="4" formControlName="cod_mod_boja" placeholder="Código del módulo"></ion-input>
+      <ion-input maxlength="4" formControlName="cod_mod_boja" placeholder="Código del módulo"></ion-input>
       <ion-note slot="error">solo permite números</ion-note>
     </ion-item>
     <ion-item counter="true" fill="solid">
@@ -23,15 +23,16 @@
     </ion-item>
     <ion-item counter="true" fill="solid">
       <ion-select interface="popover" formControlName="titulo" placeholder="Selecciona título">
-        <ion-select-option *ngFor="let lista of listaTitulos"
-          [value]="lista.id">{{lista.nombre}}</ion-select-option>
+        <ion-select-option *ngFor="let lista of listaTitulos">
+        [value]="lista.id">{{lista.nombre}}</ion-select-option>
       </ion-select>
       <ion-note slot="error"></ion-note>
     </ion-item>
     <ion-grid>
       <ion-row>
         <ion-col style="text-align: right;">
-          <ion-button shape="round" color="success" type="submit" [disabled]="this.formModulo.pristine">Guardar</ion-button>
+          <ion-button shape="round" color="success" type="submit"
+            [disabled]="this.formModulo.pristine">Guardar</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
