--- a/src/app/pages/ce-title-edit/ce-title-edit.page.html
+++ b/src/app/pages/ce-title-edit/ce-title-edit.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Crear título</ion-title>
+    <ion-title>Crear ciclo formativo</ion-title>
     <!--Botón que permite cancelar y cerrar el modal-->
     <ion-buttons slot="end">
       <ion-button (click)="cancel()" [strong]="true"><ion-icon name="close-outline"></ion-icon></ion-button>
@@ -26,3 +26,4 @@
     </ion-grid>
   </form>
 </ion-content>
+
