--- a/src/app/tabs_centrosEducativo/tabs.page.html
+++ b/src/app/tabs_centrosEducativo/tabs.page.html
@@ -14,7 +14,7 @@
 
     <ion-tab-button tab="titulo">
       <ion-icon name="briefcase-outline"></ion-icon>
-      <ion-label>titulo</ion-label>
+      <ion-label>Ciclo Formativo</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="periodopracticas">
