--- a/src/app/alumno/tareas/tareas.page.html
+++ b/src/app/alumno/tareas/tareas.page.html
@@ -2,6 +2,13 @@
   <ion-toolbar>
     <ion-title id="title">Tareas</ion-title>
     <ion-buttons slot="end">
+      <ion-item>
+        <ion-icon slot="start" name="moon"></ion-icon>
+        <ion-toggle slot="end"
+                    [ngModel]="darkMode"
+                    (ionChange)="cambio()"></ion-toggle>
+      </ion-item>
+
       <ion-button (click)="cerrarSesion()">
         <ion-icon slot="icon-only" name="exit"></ion-icon>
       </ion-button>
