--- a/src/app/centroeducativo/modulo/modulo.page.html
+++ b/src/app/centroeducativo/modulo/modulo.page.html
@@ -1,13 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <!--Botón que permite salir de la sesión actual con el ultimo usuario logueado-->
+      <!--nos permite dirigirnos a la pagina anterior a esta-->
       <ion-button (click)="backToTitle()">
         <ion-icon slot="icon-only" name="arrow-undo-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <!--nos permite dirigirnos a la pagina anterior a esta-->
-    <ion-title>Módulos de {{tittle}} </ion-title>
+    <ion-title>Módulos de {{tittleName}} </ion-title>
     <ion-buttons slot="end">
       <!--Botón que permite salir de la sesión actual con el ultimo usuario logueado-->
       <ion-button (click)="cerrarSesion()">
@@ -26,7 +25,7 @@
   </div>
 <!--Lista de objetos de tipo modulo que al seleccionar un "ion-item" se abra un modal con el contenido de RA que se da en este modulo en concreto-->
   <ion-list lines="inset">
-    <ion-item id="open-modal" *ngFor="let lista of this.filter;let i=index" expand="block" (click)="listaRAModul(lista)">
+    <ion-item id="open-modal" *ngFor="let lista of this.filter;let i=index" (click)="listaRAModul(lista)">
       <ion-label>
         <h3>{{lista.nombre}}</h3>
         <p>Có. Boja: {{lista.cod_mod_boja}}</p>
