--- a/src/app/centroeducativo/titulo/titulo.page.html
+++ b/src/app/centroeducativo/titulo/titulo.page.html
@@ -18,10 +18,10 @@
     <ion-button (click)="this.addTitle()" style="--background: #141414; zoom:1.25"><ion-icon name="duplicate-outline" style="color: white;"></ion-icon></ion-button>
   </div>
 <!--Lista de objetos de tipo título que al seleccionar un "ion-item" pasa a la siguiente ventana en el que muestra los módulos de este título en concreto-->
-  <ion-list lines="inset" *ngFor="let lista of this.filter;let i=index" (click)="toTitleToModul(lista)">
-    <ion-item id="open-modal" expand="block">
+  <ion-list lines="inset" *ngFor="let listaTittle of this.filter;let i=index">
+    <ion-item id="open-modal" expand="block" [routerLink]="['/modulo',listaTittle.nombre, {id: listaTittle.id}]">
       <ion-label>
-        <h1>{{lista.nombre}}</h1>
+        <h1>{{listaTittle.nombre}}</h1>
       </ion-label>
     </ion-item>
   </ion-list>
