--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -1,40 +1,3 @@
-.buttonAdd {
-    --background: #b7f399;
-    --background-activated: #87d361;
-    --background-hover: #a3e681;
-    --border-radius: 15px;
-    --box-shadow: 0px 1px 2px 0px rgba(0,0,0,.3), 0px 1px 3px 1px rgba(0,0,0,.15);
-    --color: black;
-}
-
-.block {
-    display: flex;
-    justify-content: right;
-    align-items: flex-end;
-    margin-top: 6px;
-    margin-left: 10px;
-    margin-right: 70px;
-    margin-bottom: 20px;
-}
-
-.blockButton {
-    display: flex;
-    justify-content: right;
-    align-items: flex-end;
-    margin-right: 18px;
-    margin-top: -20px;
-}
-
-.iconExit {
-    display: flex;
-    align-items: flex-end;
-}
-
-.editCE {
-    font-size: 36px;
-    margin-left: 20px;
-}
-
-.listUserCE {
+.list {
     margin-top: 18px;
 }
