--- a/src/app/pages/edit-ce/edit-ce.page.html
+++ b/src/app/pages/edit-ce/edit-ce.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Actualizar Centro</ion-title>
+    <ion-title>Actualizar Centro Educativo</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
 
-  <form [formGroup]="formEdit" (ngSubmit)="updateUserCE()">
+  <form [formGroup]="editUser" (ngSubmit)="updateUser()">
     <ion-item>
       <ion-label position="floating">Nombre</ion-label>
       <ion-input type="text" formControlName="nombre"></ion-input>
@@ -18,19 +18,23 @@
     </ion-item>
     
     <ion-item>
-      <ion-label position="floating">Correo electrónico</ion-label>
+      <ion-label position="floating">Correo Electrónico</ion-label>
       <ion-input type="email" formControlName="correo"></ion-input>
     </ion-item>
 
     <ion-grid>
       <ion-row>
-        <ion-col id="btn" style="text-align: left;">
-          <ion-button class="btnCancel" shape="round" color="danger" fill="outline" (click)="deleteUserCE()">DELETE</ion-button>
+
+        <ion-col style="text-align: left;">
+          <ion-button shape="round" color="danger" fill="outline" (click)="deleteUser()">DELETE</ion-button>
         </ion-col>
-        <ion-col  style="text-align: right;">
-          <ion-button class="btnSave" shape="round" color="success" type="submit" [disabled]="!formEdit.valid">SAVE</ion-button>
+
+        <ion-col style="text-align: right;">
+          <ion-button shape="round" color="success" type="submit" [disabled]="!editUser.valid">SAVE</ion-button>
         </ion-col>
+
       </ion-row>
+
     </ion-grid>
   </form>
 
