--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -2,6 +2,12 @@
   <ion-toolbar>
     <ion-title>Administrador</ion-title>
     <ion-buttons slot="end">
+      <ion-item>
+        <ion-icon slot="start" name="moon"></ion-icon>
+        <ion-toggle slot="end"
+                    [ngModel]="darkMode"
+                    (ionChange)="cambio()"></ion-toggle>
+      </ion-item>
       <ion-button (click)="logOut()">
         <ion-icon slot="icon-only" name="exit"></ion-icon>
       </ion-button>
