actualizacion ra y ce 1

--- a/src/app/pages/ce-title-edit/ce-title-edit.page.html
+++ b/src/app/pages/ce-title-edit/ce-title-edit.page.html
@@ -10,9 +10,10 @@
 <!--contenido dentro del modal que permite introducir datos y "guardarlos"-->
 <ion-content class="ion-padding">
   <form [formGroup]="formTitulo" (ngSubmit)="submitForm()">
-    <ion-item fill="solid">
+    <ion-item counter="true" fill="solid">
       <ion-label position="floating">Nombre</ion-label>
-      <ion-input formControlName="titulo" placeholder="titulo" ></ion-input>
+      <ion-input maxlength="7" formControlName="titulo" placeholder="titulo" ></ion-input>
+      <ion-note slot="error">solo permite letras</ion-note>
     </ion-item>
     <ion-grid>
       <ion-row>
