--- a/src/app/centroeducativo/modulo/modulo.page.html
+++ b/src/app/centroeducativo/modulo/modulo.page.html
@@ -25,11 +25,16 @@
   </div>
 <!--Lista de objetos de tipo modulo que al seleccionar un "ion-item" se abra un modal con el contenido de RA que se da en este modulo en concreto-->
   <ion-list lines="inset">
-    <ion-item id="open-modal" *ngFor="let lista of this.filter;let i=index" (click)="listaRAModul(lista)">
-      <ion-label>
-        <h3>{{lista.nombre}}</h3>
-        <p>Có. Boja: {{lista.cod_mod_boja}}</p>
+    <ion-item id="open-modal" *ngFor="let listamodul of this.filter;let i=index" >
+      <ion-label (click)="listaRAModul(listamodul)">
+        <h3>{{listamodul.nombre}}</h3>
+        <p>Có. Boja: {{listamodul.cod_mod_boja}}</p>
       </ion-label>
+      <ion-buttons slot="end">
+        <ion-button (click)="delModul(listamodul)">
+          <ion-icon slot="icon-only" color="danger" name="trash-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
     </ion-item>
   </ion-list>
   
