--- a/src/app/pages/ce-user-edit/ce-user-edit.page.html
+++ b/src/app/pages/ce-user-edit/ce-user-edit.page.html
@@ -11,17 +11,20 @@
 <!--contenido dentro del modal que permite introducir datos y "guardarlos"-->
 <ion-content class="ion-padding">
   <form [formGroup]="formUsuario" (ngSubmit)="submitForm()">
-    <ion-item fill="solid">
+    <ion-item counter="true" fill="solid">
       <ion-label position="floating">Nombre</ion-label>
-      <ion-input formControlName="nombre" placeholder="nombre de usuario" ></ion-input>
+      <ion-input maxlength="50" formControlName="nombre" placeholder="nombre de usuario" ></ion-input>
+      <ion-note slot="error">solo permite Nombres reales</ion-note>
     </ion-item>
-    <ion-item fill="solid">
+    <ion-item counter="true" fill="solid">
       <ion-label position="floating">Correo</ion-label>
-      <ion-input formControlName="correo" placeholder="correo electrónico" ></ion-input>
+      <ion-input maxlength="120" formControlName="correo" placeholder="correo electrónico" ></ion-input>
+      <ion-note slot="error">introduce un correo electrónico valido </ion-note>
     </ion-item>
-    <ion-item fill="solid">
-      <ion-label position="floating">DNI/NIF</ion-label>
-      <ion-input formControlName="documentos" placeholder="documento de identidad" ></ion-input>
+    <ion-item counter="true" fill="solid">
+      <ion-label position="floating">DNI</ion-label>
+      <ion-input maxlength="9" formControlName="documentos" placeholder="documento de identidad" ></ion-input>
+      <ion-note slot="error">Introduce un DNI valido</ion-note>
     </ion-item>
     <ion-item fill="solid">
       <ion-label>Alta</ion-label>
