--- a/src/app/components/tarea/tarea.component.scss
+++ b/src/app/components/tarea/tarea.component.scss
@@ -3,6 +3,12 @@
 }
 ion-title{
     margin-top: 5pt;
+    font-weight: bolder;
+}
+ion-label{
+    margin: 22px;
+    font-weight: bolder;
+    font-size: larger;
 }
 #fecha{
     text-align: right;
