--- a/src/app/pages/new-task/new-task.page.html
+++ b/src/app/pages/new-task/new-task.page.html
@@ -28,7 +28,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">Fecha</ion-label>
-      <ion-input formControlName="taskdate" placeholder="Fecha actual"></ion-input>
+      <ion-input readonly formControlName="taskdate" placeholder="Fecha actual"></ion-input>
     </ion-item>
 
     <ion-grid>
