--- a/src/app/empresa/alumnos/alumnos.page.html
+++ b/src/app/empresa/alumnos/alumnos.page.html
@@ -1,6 +1,12 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar style="display: flex; flex-direction: row;">
     <ion-title>Alumno</ion-title>
+    <ion-item slot="end">
+      <ion-icon slot="start" name="moon"></ion-icon>
+      <ion-toggle slot="end"
+                  [ngModel]="darkMode"
+                  (ionChange)="cambio()"></ion-toggle>
+    </ion-item>
     <ion-buttons slot="end">
       <ion-button (click)="cerrarSesion()">
         <ion-icon slot="icon-only" name="exit"></ion-icon>
@@ -15,7 +21,7 @@
     <ion-searchbar id="searchempresa" placeholder="Buscar" animated (ionChange)="handleChange($event)" ></ion-searchbar>
   </div>
     <div id="divlist" *ngIf="permision">
-      <ion-card (click)="this.viewAlumn(alumno)" class="item" id="open-modal" *ngFor="let alumno of this.filter;let i=index">
+      <ion-card (click)="this.viewAlumn(alumno)" class="card" id="open-modal" *ngFor="let alumno of this.filter;let i=index">
         <ion-icon name="person-outline" style="zoom:10"></ion-icon>
         <ion-card-header>
           <ion-card-title>{{alumno.nombre}}</ion-card-title>
