--- a/src/global.scss
+++ b/src/global.scss
@@ -27,9 +27,9 @@
 
 
 :root {
-    //--ion-color-floatbuton: #33d9f0;
-    --ion-color-floatbuton: #000000;
-    --ion-color-primary: #000000;
+    --ion-color-floatbuton: #33d9f0;
+    //--ion-color-floatbuton: #000000;
+    //--ion-color-primary: #000000;
     --ion-color-floatbuton-rgb: 51, 217, 240;
     --ion-color-floatbuton-contrast: #000000;
     --ion-color-floatbuton-contrast-rgb: 0, 0, 0;
