--- a/src/app/centroeducativo/ra/ra.page.html
+++ b/src/app/centroeducativo/ra/ra.page.html
@@ -1,20 +1,35 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Có. Boja {{codmodul}} </ion-title>
-    
-    <!--Botón que permite cancelar y cerrar el modal-->
+    <ion-buttons slot="start">
+      <!--nos permite dirigirnos a la pagina anterior a esta-->
+      <ion-button (click)="backToModule()">
+        <ion-icon slot="icon-only" name="arrow-undo-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>Có. Boja {{this.modulCMB}} </ion-title>
+    <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="cambio()">
+    </ion-toggle>
     <ion-buttons slot="end">
-      <ion-button (click)="cancel()" [strong]="true"><ion-icon name="close-outline"></ion-icon></ion-button>
+      <!--Botón que permite salir de la sesión actual con el ultimo usuario logueado-->
+      <ion-button (click)="cerrarSesion()">
+        <ion-icon slot="icon-only" name="exit"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <p>Resultado de Apredizaje de {{nommodul}}</p>
+
 </ion-header>
 <ion-content class="ion-padding">
-  <!--contenido dentro del modal que permite introducir datos y "guardarlos"-->
-  <form (ngSubmit)="submitForm()">
+  <div>
+    <ion-toolbar>
+      <ion-title slot="start"> Resultado de Apredizaje de {{modulName}}</ion-title> 
+      <!--Botón para agregar una nuevo Ra-->
+      <ion-button slot="end" (click)="this.addRa()" style="--background: #141414; zoom:1.25"><ion-icon name="duplicate-outline"></ion-icon></ion-button>
+  </ion-toolbar>
+  </div>
+  <form>
     <ion-toolbar>
       <ion-accordion-group expand="inset">
-        <ion-accordion *ngFor="let listaA of this.ListaRa;let ra=index">
+        <ion-accordion id="open-modal" *ngFor="let listaA of this.ListaRa;let ra=index">
           <ion-item slot="header">
             {{[ra]}}. {{listaA.resultado}}
             <ion-buttons slot="end">
@@ -29,10 +44,5 @@
         </ion-accordion>
       </ion-accordion-group>
     </ion-toolbar>
-    <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-      <ion-button id="addbuton" (click)="this.addRa()" style="--background: #141414; zoom:1.25">
-        <ion-icon name="add"></ion-icon>
-      </ion-button>
-    </ion-fab>
   </form>
 </ion-content>
