--- a/src/app/centroeducativo/titulo/titulo.page.html
+++ b/src/app/centroeducativo/titulo/titulo.page.html
@@ -23,7 +23,7 @@
 <!--Lista de objetos de tipo título que al seleccionar un "ion-item" pasa a la siguiente ventana en el que muestra los módulos de este título en concreto-->
   <ion-list lines="inset" *ngFor="let listaTittle of this.filter;let i=index">
     <ion-item id="open-modal" expand="block" >
-      <ion-label [routerLink]="['/modulo',listaTittle.nombre, {id: listaTittle.id}]">
+      <ion-label (click)="navToModule(listaTittle)">
         <h1>{{listaTittle.nombre}}</h1>
       </ion-label>
       <ion-buttons slot="end">
