--- a/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
+++ b/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Periodo de {{practica}}</ion-title>
+    <ion-toggle 
+    slot="end" [ngModel]="darkMode" (ionChange)="cambio()">
+    </ion-toggle>
     <ion-buttons slot="end">
       <!--Botón qu permite salir de la sesión actual con el ultimo usuario logueado-->
       <ion-button (click)="cerrarSesion()">
