--- a/src/app/pages/ce-module-ra-edit/ce-module-ra-edit.page.html
+++ b/src/app/pages/ce-module-ra-edit/ce-module-ra-edit.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Nuevo RA en {{nommodul}}</ion-title>
+    <ion-title>{{title}} RA en {{nommodul}}</ion-title>
     <!--Botón que permite cancelar y cerrar el modal-->
     <ion-buttons slot="end">
       <ion-button (click)="cancel()" [strong]="true"><ion-icon name="close-outline"></ion-icon></ion-button>
