--- a/src/app/centroeducativo/titulo/titulo.page.html
+++ b/src/app/centroeducativo/titulo/titulo.page.html
@@ -1,15 +1,21 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Ciclo Formativo</ion-title>
-    <ion-toggle 
-    slot="end" [ngModel]="darkMode" (ionChange)="cambio()">
-    </ion-toggle>
     <ion-buttons slot="end">
-      <!--Botón que permite salir de la sesión actual con el ultimo usuario logueado-->
-      <ion-button (click)="cerrarSesion()">
-        <ion-icon slot="icon-only" name="exit"></ion-icon>
+      <ion-item>
+        <ion-icon slot="start" name="moon"></ion-icon>
+        <!--Botón que permite cambiar de tema-->
+        <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="change()">
+        </ion-toggle>
+      </ion-item>
+      <ion-button (click)="editAvatar()">
+        <ion-icon name="person-outline"></ion-icon>
       </ion-button>
-    </ion-buttons>
+      <!--Botón qu permite salir de la sesión actual con el ultimo usuario logueado-->
+        <ion-button (click)="cerrarSesion()">
+          <ion-icon slot="icon-only" name="exit"></ion-icon>
+        </ion-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
