actualizacion menu y de centros educativos

--- a/src/app/centroeducativo/modulo/modulo.page.html
+++ b/src/app/centroeducativo/modulo/modulo.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar style="display: flex; flex-direction: row;">
     <ion-buttons slot="start">
       <!--nos permite dirigirnos a la pagina anterior a esta-->
       <ion-button (click)="backToTitle()">
