--- a/src/app/centroeducativo/alumno/alumno.page.html
+++ b/src/app/centroeducativo/alumno/alumno.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar style="display: flex; flex-direction: row;">
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
     <ion-title>Alumno</ion-title>
     <ion-buttons slot="end">
       <ion-item>
@@ -8,9 +11,6 @@
         <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="change()">
         </ion-toggle>
       </ion-item>
-      <ion-button (click)="editAvatar()">
-        <ion-icon name="person-outline"></ion-icon>
-      </ion-button>
       <!--Botón qu permite salir de la sesión actual con el ultimo usuario logueado-->
       <ion-button (click)="cerrarSesion()">
         <ion-icon slot="icon-only" name="exit"></ion-icon>
