--- a/src/app/centroeducativo/empresa/empresa.page.html
+++ b/src/app/centroeducativo/empresa/empresa.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true" id="Empresa">
   <ion-toolbar style="display: flex; flex-direction: row;">
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
     <ion-title>{{empresa}}</ion-title>
     <ion-buttons slot="end">
       <ion-item>
