--- a/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
+++ b/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar style="display: flex; flex-direction: row;">
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
     <ion-title>Periodo de {{practica}}</ion-title>
     <ion-buttons slot="end">
       <ion-item>
