--- a/src/app/tabs_centrosEducativo/tabs.page.html
+++ b/src/app/tabs_centrosEducativo/tabs.page.html
@@ -1,26 +1,58 @@
-<ion-tabs>
+<ion-app>
+  <ion-menu menuId="main-menu" contentId="main">
+    <ion-content>
+      <div class="menu-header-bg"></div>
+      <div class="header-content">
+        
+        <img src="name=person-outline" alt="" (click)="editAvatar()">
+        <ion-label>
+          <h2>{{name}}</h2>
+          <p>{{subtittle}}</p>
+        </ion-label>
+      </div>
+      <ion-list class="menu-item" lines="none">
+        <ion-item class="active" tab="empresa" button detail="true" (click)="redirectTo('empresa')" (click)="clMenu()">
+          <ion-icon name="calendar-outline"></ion-icon>
+          <p>Empresa</p>
+        </ion-item>
+        <ion-item class="active" tab="alumno" button detail="true" (click)="redirectTo('alumno')" (click)="clMenu()">
+          <ion-icon name="school"></ion-icon>
+          <p>Alumno </p>
+        </ion-item>
+        <ion-item class="active" tab="titulo" button detail="true" (click)="redirectTo('titulo')" (click)="clMenu()">
+          <ion-icon name="briefcase-outline"></ion-icon>
+          <p>Ciclo Formativo</p>
+        </ion-item>
 
+        <ion-item class="active" tab="periodopracticas" button detail="true" (click)="redirectTo('periodopracticas')"
+          (click)="clMenu()">
+          <ion-icon name="color-palette-outline"></ion-icon>
+          <p> Practicas</p>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
+</ion-app>
+<!--
+<ion-tabs>
   <ion-tab-bar slot="bottom">
-    
     <ion-tab-button tab="empresa">
       <ion-icon name="calendar-outline"></ion-icon>
       <ion-label>Empresa</ion-label>
     </ion-tab-button>
-
     <ion-tab-button tab="alumno">
       <ion-icon name="school"></ion-icon>
       <ion-label>Alumno</ion-label>
     </ion-tab-button>
-
     <ion-tab-button tab="titulo">
       <ion-icon name="briefcase-outline"></ion-icon>
       <ion-label>Ciclo Formativo</ion-label>
     </ion-tab-button>
-
     <ion-tab-button tab="periodopracticas">
       <ion-icon name="color-palette-outline"></ion-icon>
       <ion-label>Practicas</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
+-->
