--- a/src/app/tabs_centrosEducativo/tabs.page.scss
+++ b/src/app/tabs_centrosEducativo/tabs.page.scss
@@ -1,1 +1,84 @@
 
+.menu-header-bg{
+  height: 180px;
+  width: 350px;
+  background: #2dbfd3;
+  background: linear-gradient(90deg, white 0%, #2dbfd3 100%);
+  box-shadow: 0px 1px 10px rgba(98, 140, 255, 0.5);
+  transform: rotate( 0deg);
+  border-radius: 10px 10px 10px 50px;
+  margin-left: -18px;
+  margin-top: -50px;
+  margin-bottom: 60px;
+}
+
+.header-content {
+  position: absolute;
+  top: 30px;
+  left: 15px;
+  display: flex;
+  align-items: center;
+
+  img{
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      border: 7px solid #2dbfd3;
+      margin-right: 15px;
+  }
+
+  h2{
+      font-weight: 300;
+      color: #fff;
+  }
+
+  p{
+      font-size: 12px;
+      color: #fff;
+      font-weight: 100;
+      letter-spacing: 0.4px;
+  }
+}
+
+.menu-item{
+  margin: 0px;
+
+  ion-icon {
+    margin-right: 20px;
+    color: #2dbfd3;
+  }
+
+  ion-item{
+    padding-left: 20px;
+    margin-bottom: 10px;
+    --border-radius: 10px;
+  }
+}
+
+.ac-button {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+
+  ion-button {
+    text-transform: capitalize;
+    font-weight: 300;
+    --background: blue;
+    --border-radius: 7px;
+    --box-shadow:none;
+  }
+
+  ion-icon{
+    margin-right: 1px;
+  }
+}
+
+ion-menu::part(backdrop) {
+background-color: rgba(228, 235, 234, 0.5);
+}
+  
+ion-menu::part(container) {
+border-radius: 0 20px 20px 0;
+  
+box-shadow: 4px 0px 16px #2dbfd3;
+}
