--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -1,3 +1,19 @@
 .list {
     margin-top: 18px;
 }
+
+.icon {
+    height: 3px;
+    width: 2px;
+    margin-right: 1px;
+}
+
+.button-border {
+    --background: white;
+    --color: black;
+    --border-color: black;
+}
+  
+.button-border::part(native) {
+    border: 1px solid var(--border-color);
+}
