--- a/src/app/tabs_Empresa/tabs.page.html
+++ b/src/app/tabs_Empresa/tabs.page.html
@@ -1,5 +1,36 @@
+<ion-app>
+  <ion-menu menuId="main-menu" contentId="main">
+    <ion-content>
+      <div class="menu-header-bg"></div>
+      <div class="header-content">
+        <ion-icon *ngIf="this.img==null" name="person-outline" style="zoom:4" color="light" (click)="editAvatar()"></ion-icon>
+        <img *ngIf="this.img!=null" [src]="img" alt="" (click)="editAvatar()">
+        <ion-label>
+          <h2>{{name}}</h2>
+          <p>{{subtittle}}</p>
+        </ion-label>
+      </div>
+      <ion-list class="menu-item" lines="none">
+        <ion-item class="active" tab="alumnos" button detail="true" (click)="redirectTo('alumnos')" (click)="clMenu()">
+          <ion-icon name="people-outline"></ion-icon>
+          <p>Alumnos</p>
+        </ion-item>
+        <ion-item class="active" tab="tareas" button detail="true" (click)="redirectTo('tareas')" (click)="clMenu()">
+          <ion-icon name="library-outline"></ion-icon>
+          <p>Tareas</p>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+    <ion-content style="bottom: auto;">
+      <ion-button (click)="cerrarSesion()">
+        <ion-icon slot="icon-only" name="exit"></ion-icon>
+      </ion-button>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
+</ion-app>
+<!-- 
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="alumnos">
       <ion-icon name="people-outline"></ion-icon>
@@ -10,5 +41,5 @@
       <ion-label>Tareas</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
+-->
