--- a/src/app/pages/ce-practices-edit/ce-practices-edit.page.html
+++ b/src/app/pages/ce-practices-edit/ce-practices-edit.page.html
@@ -14,9 +14,8 @@
     <ion-list>
       <ion-item>
         <ion-label position="floating">Empresa</ion-label>
-        <ion-select interface="popover" formControlName="id_empresa" placeholder="Selecciona empresa">
-          <ion-select-option *ngFor="let listaE of this.listEmp;let i=index"
-            [value]="listaE.id">{{listaE.nombre}}</ion-select-option>
+        <ion-select #selectBusiness interface="popover" placeholder="Selecciona empresa">
+          <ion-select-option *ngFor="let listaE of this.listEmp;let i=index " [value]="listaE.id">{{listaE.nombre}}</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-list>
@@ -24,9 +23,8 @@
     <ion-list>
       <ion-item>
         <ion-label position="floating">Alumno</ion-label>
-        <ion-select interface="popover" formControlName="id_alumno" placeholder="Selecciona alumno">
-          <ion-select-option *ngFor="let listaA of this.listAlu;let i=index"
-            [value]="listaA.id">{{listaA.nombre}}</ion-select-option>
+        <ion-select #selectAlumn interface="popover" placeholder="Selecciona alumno">
+          <ion-select-option *ngFor="let listaA of this.listAlu;let i=index" [value]="listaA.id">{{listaA.nombre}}</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-list>
