--- a/src/app/alumno/tareas/tareas.page.html
+++ b/src/app/alumno/tareas/tareas.page.html
@@ -8,7 +8,7 @@
                     [ngModel]="darkMode"
                     (ionChange)="cambio()"></ion-toggle>
       </ion-item>
-      <ion-button (click)="editTask()">
+      <ion-button (click)="editProfile()">
         <ion-icon name="person-outline"></ion-icon>
       </ion-button>
       <ion-button (click)="cerrarSesion()">
