--- a/src/app/pages/edit-profile/edit-profile.page.scss
+++ b/src/app/pages/edit-profile/edit-profile.page.scss
@@ -5,8 +5,11 @@
     margin-top: 20px;
     margin-bottom: 20px;
     max-width: 100%;
+    cursor: pointer;
 }
 
 .icon{
     align-content: center;
+    cursor: pointer;
 }
+
