--- a/src/app/pages/ce-title-edit/ce-title-edit.page.html
+++ b/src/app/pages/ce-title-edit/ce-title-edit.page.html
@@ -1,30 +1,36 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{title}} ciclo formativo</ion-title>
-    <!--Botón que permite cancelar y cerrar el modal-->
+    <ion-title>{{ title }} ciclo formativo</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="cancel()" [strong]="true"><ion-icon name="close-outline"></ion-icon></ion-button>
+      <ion-button (click)="cancel()" [strong]="true">
+        <ion-icon name="close-outline"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<!--contenido dentro del modal que permite introducir datos y "guardarlos"-->
-<ion-content class="ion-padding">
-  <form [formGroup]="formTitulo" (ngSubmit)="submitForm()">
-    <ion-item counter="true" fill="solid">
-      <ion-label position="floating">Nombre</ion-label>
-      <ion-input maxlength="7" formControlName="nombre" placeholder="nombre" ></ion-input>
-      <ion-note slot="error">solo permite letras</ion-note>
-    </ion-item>
-    <ion-grid>
-      <ion-row>
-        <ion-col id="btnDelete" style="text-align: left;">
-          <ion-button shape="round" color="danger" fill="outline" (click)="onDelete()">Eliminar</ion-button>
-        </ion-col>  
-        <ion-col style="text-align: right;">
-          <ion-button shape="round" color="success" type="submit" [disabled]="this.formTitulo.pristine">Guardar</ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </form>
-</ion-content>
 
+<ion-content class="ion-padding">
+  <div class="form-content">
+    <form [formGroup]="formTitulo" (ngSubmit)="submitForm()">
+      <ion-item counter="true" fill="solid">
+        <ion-label position="floating">Nombre</ion-label>
+        <ion-input maxlength="7" formControlName="nombre" placeholder="nombre"></ion-input>
+        <ion-note slot="error">solo permite letras</ion-note>
+      </ion-item>
+      <ion-grid>
+        <ion-row>
+          <ion-col id="btnDelete" style="text-align: left;">
+            <ion-button shape="round" color="danger" fill="outline" (click)="onDelete()">
+              Eliminar
+            </ion-button>
+          </ion-col>
+          <ion-col style="text-align: right;">
+            <ion-button shape="round" color="success" type="submit" [disabled]="this.formTitulo.pristine">
+              Guardar
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </div>
+</ion-content>
