--- a/src/app/centroeducativo/titulo/titulo.page.html
+++ b/src/app/centroeducativo/titulo/titulo.page.html
@@ -11,10 +11,6 @@
         <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="change()">
         </ion-toggle>
       </ion-item>
-      <!--Botón qu permite salir de la sesión actual con el ultimo usuario logueado-->
-        <ion-button (click)="cerrarSesion()">
-          <ion-icon slot="icon-only" name="exit"></ion-icon>
-        </ion-button>
       </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -28,7 +24,7 @@
   </div>
 <!--Lista de objetos de tipo título que al seleccionar un "ion-item" pasa a la siguiente ventana en el que muestra los módulos de este título en concreto-->
   <ion-list lines="inset" *ngFor="let listaTittle of this.filter;let i=index">
-    <ion-item id="open-modal" expand="block" >
+    <ion-item class="listItems" id="open-modal" expand="block" >
       <ion-label (click)="navToModule(listaTittle)">
         <h1>{{listaTittle.nombre}}</h1>
       </ion-label>
