Comentado Código Parte Admin

--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -18,7 +18,7 @@
 <nav>
   <div style="display: flex; flex-direction: row;">
     <ion-searchbar placeholder="Search..." (ionChange)="searchUserByName($event)"></ion-searchbar>
-      <ion-button (click)="addUser()" class="button-border" color="white" style="zoom:1.25">
+      <ion-button (click)="addUser()" color="white" style="zoom:1.25">
         <ion-icon name="duplicate-outline" color="dark"></ion-icon>
       </ion-button>
   </div>
