--- a/src/app/tabs_centrosEducativo/tabs.page.html
+++ b/src/app/tabs_centrosEducativo/tabs.page.html
@@ -4,7 +4,7 @@
       <div class="menu-header-bg"></div>
       <div class="header-content">
         
-        <img src="name=person-outline" alt="" (click)="editAvatar()">
+        <img src="" alt="" (click)="editAvatar()">
         <ion-label>
           <h2>{{name}}</h2>
           <p>{{subtittle}}</p>
