--- a/src/app/empresa/alumnos/alumnos.page.html
+++ b/src/app/empresa/alumnos/alumnos.page.html
@@ -3,16 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
-    <ion-title>Alumno</ion-title>
-    <ion-buttons slot="end">
-      <ion-item>
-        <ion-icon slot="start" name="moon"></ion-icon>
-        <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="cambio()"></ion-toggle>
-      </ion-item>
-      <ion-button (click)="cerrarSesion()">
-        <ion-icon slot="icon-only" name="exit"></ion-icon>
-      </ion-button>
-    </ion-buttons>
+    <ion-title slot="end">Alumno</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -45,7 +36,7 @@
 
 <ion-content class="ion-padding">
   <ion-list class="list">
-    <ion-item *ngFor="let alumno of this.filter;let i=index">
+    <ion-item (click)="this.viewAlumn(alumno)" id="open-modal" *ngFor="let alumno of this.filter;let i=index">
       <div>
         <ion-img class="image" style="border-radius: 100%;" *ngIf="alumno.imagen!=null" src={{alumno.imagen}}></ion-img>
       </div>
