--- a/src/app/tabs_Empresa/tabs.page.html
+++ b/src/app/tabs_Empresa/tabs.page.html
@@ -20,26 +20,22 @@
           <p>Tareas</p>
         </ion-item>
       </ion-list>
-    </ion-content>
-    <ion-content style="bottom: auto;">
-      <ion-button (click)="cerrarSesion()">
-        <ion-icon slot="icon-only" name="exit"></ion-icon>
-      </ion-button>
+      <ion-list class="content-wrapper">
+          <div class="content-item">
+            <ion-item>
+              <ion-label>Dark Mode&nbsp;&nbsp;&nbsp;</ion-label>
+              <ion-icon name="sunny-outline"></ion-icon>
+              <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="cambio()"></ion-toggle>
+              <ion-icon slot="end" name="moon"></ion-icon>
+            </ion-item>
+          </div>
+          <div class="content-item">
+            <ion-button slot="start" (click)="cerrarSesion()">Cerrar Sesión
+              <ion-icon slot="end" name="exit"></ion-icon>
+            </ion-button>
+          </div>
+      </ion-list>
     </ion-content>
   </ion-menu>
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
-<!-- 
-<ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="alumnos">
-      <ion-icon name="people-outline"></ion-icon>
-      <ion-label>Alumnos</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="tareas">
-      <ion-icon name="library-outline"></ion-icon>
-      <ion-label>Tareas</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-</ion-tabs>
--->
